<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="5dp">

    <LinearLayout android:id="@+id/column_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".5"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/age" />

        <TextView
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/job" />

        <TextView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/search" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/location" />

        <TextView
            android:id="@+id/qm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/qm" />

        <TextView
            android:id="@+id/pricing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/pricing" />

        <TextView
            android:id="@+id/others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/others" />

        <Button
            android:id="@+id/selectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"/>

        <Button
            android:id="@+id/takePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take"/>

        <Button
            android:id="@+id/sendData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"/>


    </LinearLayout>

    <LinearLayout android:id="@+id/column_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".5"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/ageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/jobInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/locationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/qmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/pricingInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/othersInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <ImageView
            android:id="@+id/picture1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>



</LinearLayout>
